apps/llama-cpp/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp
spec:
  replicas: 1
  template:
    spec:
