apps/llama-cpp/overlays/nishir/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp
spec:
  hostnames:
    - chat.i.shikanime.studio
  parentRefs:
    - name: llama-cpp
      sectionName: https
